Fixed type idgb instead of igdb, and env variable not visible in production

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -230,6 +230,7 @@ a:active {
 
 .modal {
   background-color: var(--gray-0);
+  max-width: 98%;
   position: absolute;
   top: 50%;
   left: 50%;
